# ledsRust

./: Cargo.toml  README.md  sdkconfig.defaults
src/: main.rs
src/animations/: animation.rs  animation_list.rs  hsv_wrapper.rs  mod.rs  pulse_animation.rs  rainbow_animation.rs
src/services/: bluetooth_service.rs  mod.rs  storage_service.rs
