[package]
name = "leds"
version = "0.1.0"
authors = ["jb175"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "leds"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4.22"
esp-idf-svc = { version = "0.49.1", features = [
    "critical-section",
    "embassy-time-driver",
    "embassy-sync",
    "experimental"
    ] }
esp-idf-hal = { version = "0.44.1"}
esp-idf-sys = { version = "0.35"}
smart-leds = { version = "0.4"}
ws2812-esp32-rmt-driver = { version = "0.10", features = [
    "smart-leds-trait"
    ] }
enumset = "1.1.5"
anyhow = "1.0.95"
heapless = "0.8"
serde_json = "1.0.134"
serde = "1.0.216"

[build-dependencies]
embuild = "0.32.0"
cc = "=1.1.30" # Version "1.1.30" necessary until a new version of `esp-idf-sys` is released
anyhow = "1"
